tests/invalid/Lifetime_Lambda_Invalid_2.whiley
// wrong method type

public export method test():
    method<a>(&a:int, &int)->(&*:int) m = &<a>(&a:int x, &int y -> a:new 1)
